# Assignment-2-3DFan

./: .gitignore  CMakeLists.txt  README.md  build_web.bat  build_web.sh  script_build_and_run.bat
.github/workflows/: deploy-pages.yml
Scene/: Fan.cpp  Fan.h  Model.h  Platform.h  Renderer.cpp  Renderer.h  ShaderHelper.h  main.cpp
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/shader/: FanFragment.glsl  FanVertex.glsl
android/app/src/main/cpp/: CMakeLists.txt  NativeTemplate.cpp
android/app/src/main/java/com/example/fan3d/: MainActivity.java
cmake/: ImportDependencies.cmake
lib/dpml/include/: dpml.h
lib/dpml/lib/Debug/: dpml.lib
lib/dpml/lib/Release/: dpml.lib
lib/glfw-event-recorder/: recorder.cpp
